# notiflux

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  justfile  release-please-config.json
.github/workflows/: build-and-push.yml  release-please.yml  test.yml
docker/: Dockerfile
scripts/: README.md  private_key.pem  public_key.pem  sign.py
src/: app.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  message.rs  server.rs  session.rs
