[package]
name = "notiflux"
description = "A fan-out WebSocket notify server"
version = "0.1.1"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/ikornaselur/notiflux"

[dependencies]
actix = "0.13.3"
actix-web = "4"
actix-web-actors = "4.3.0"
base64 = "0.22.0"
env_logger = "0.11.3"
jsonwebtoken = "9.3.0"
log = "0.4.21"
serde = "1.0.197"
serde_json = "1.0.115"
ulid = "1.1.2"

[profile.release]
lto = true
strip = true

